# ridges

./: .gitignore  3_TIER_ESCALATION_IMPLEMENTED.md  ADAPTIVE_STRATEGY_PLANNER.md  AGENT_ARCHITECTURE.md  AGENT_DESIGN_NOTES.md  API_MISMATCH_DETECTION.md  COMPETITIVE_PROGRAMMING_AGENT_DESIGN.md  COMPLETE_SYSTEM_SUMMARY.md  CRITICAL_BUG_ANALYSIS.md  CRITICAL_FIXES_SUMMARY.md  DEBUG_LOGGING_ADDED.md  DEBUG_MODE_GUIDE.md  DEPENDENCY_WORKAROUND.py  DOCKER_SANDBOX_ADAPTATION.md  DYNAMIC_INTERVENTION_SYSTEM.md  EMPTY_PATCH_FIX.md  FAILURE_ANALYSIS_FORMAT.md  GIT_PATCH_FIX.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENT_SUGGESTIONS.md  Kindness.py  LOCAL_MINIMUM_FIXES.md  LOCAL_MINIMUM_FIX_SUMMARY.md  MCTS_REPLACEMENT_SUMMARY.md  PATCH_FIX.md  README.md  REFACTORING_SUMMARY.md  RIDGES_CLI_README.md  SAFEGUARDS_AGAINST_PREMATURE_INTERVENTION.md  SOLUTION_FAILURE_ANALYSIS.md  SUCCESS_STORY.md  SWEBENCH_TEST_RUNNER_FIX_PLAN.md  TEST_ANALYSIS_TOOL.py  TEST_DRIVEN_AGENT_OOP_README.md  TEST_DRIVEN_AGENT_README.md  TEST_GENERATION_CONFIG.md  TOT_IMPLEMENTATION.md  agent.py  benchmark_agent.py  benchmark_agent_old.py  (+28 more)
agents/: black.py
api/: .commits_cache.json  .env.example  config.py  config_omar.py
evaluator/: models.py
inference_gateway/: .env.example  ai_models.py  config.py  main.py  models.py
kindness_refactored/: README.md  __init__.py  constants.py  enhanced_cot.py  enhanced_tool_manager.py  fix_tool_manager.py  main.py  network.py  prompts.py  utils.py  visitors.py  workflows.py
loggers/: logging_utils.py
miner/: Kindness.py  Night.py  README.md  agent.py  fortuna.py  just.py  supermount.py
(+290 files in other folders)
