[project]
name = "ridges-v2"
version = "2.0.0"
description = "Decentralized AI software agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.0.0",
    "asyncpg>=0.30.0",
    "click>=8.1.0",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fiber[full]",
    "httpx>=0.27.0",
    "openai>=1.82.0",
    "psutil>=7.0.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "rich>=14.2.0",
    "swebench>=4.1.0",
    "uvicorn>=0.30.5",
]

[tool.uv.sources]
fiber = {git = "https://github.com/rayonlabs/fiber.git"}